--- a/styles/style.css
+++ b/styles/style.css
@@ -126,4 +126,80 @@ main {
   height: 650px;
 }
 
+footer {
+  display: flex;
+  gap: 100px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background: #000;
+  padding: 10px 30px;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.footer-logo {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  font-size: 30px;
+}
+.footer-logo .subtext {
+  font-size: 12px;
+}
+
+.footer-menu {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+.footer-menu ul {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  text-align: center;
+  margin-right: 50px;
+}
+.footer-menu ul li {
+  font-size: 28px;
+  list-style-type: none;
+}
+.footer-menu ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+.footer-menu ul li a:hover {
+  transition: all 0.3s ease-out;
+  color: #198539;
+}
+.footer-menu a {
+  text-decoration: none;
+}
+.footer-menu a:active, .footer-menu a:visited {
+  text-decoration: none;
+  outline: none;
+  border: none;
+}
+.footer-menu span {
+  margin-left: 24px;
+}
+.footer-menu span a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 24px;
+}
+.footer-menu span a:active, .footer-menu span a:visited {
+  text-decoration: none;
+  outline: none;
+  border: none;
+}
+
+.footer-menu__tel {
+  width: 50px;
+  height: 50px;
+}
+
 /*# sourceMappingURL=style.css.map */
