--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -147,3 +147,96 @@ main {
         height: 650px;
     }
 }
+
+// Footer styles start
+
+footer {
+    display: flex;
+    gap: 100px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background: #000;
+    padding: 10px 30px;
+}
+
+.footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    &-logo {
+        display: flex;
+        flex-direction: column;
+        color: #fff;
+        font-size: 30px;
+
+        .subtext {
+            font-size: 12px;
+        }
+    }
+}
+
+.footer-menu {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+
+    ul {
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+        text-align: center;
+        margin-right: 50px;
+
+        li {
+            font-size: 28px;
+            list-style-type: none;
+
+            a {
+                text-decoration: none;
+                color: #fff;
+
+                &:hover {
+                    transition: all .3s ease-out;
+                    color: #198539;
+                }
+            }
+        }
+    }   
+
+    a {
+        text-decoration: none;
+
+        &:active,
+        &:visited {
+            text-decoration: none;
+            outline: none;
+            border: none;
+        }
+    }
+
+    span {
+    margin-left: 24px;
+
+        a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 24px;
+
+            &:active,
+            &:visited {
+                text-decoration: none;
+                outline: none;
+                border: none;
+            }
+        }
+    }
+}
+
+.footer-menu__tel {
+    width: 50px;
+    height: 50px;
+}
+
+// Footer styles end
