--- a/styles/style.css
+++ b/styles/style.css
@@ -179,6 +179,7 @@ footer {
   text-decoration: none;
 }
 .footer-menu a:active, .footer-menu a:visited {
+  cursor: pointer;
   text-decoration: none;
   outline: none;
   border: none;
@@ -192,6 +193,7 @@ footer {
   font-size: 24px;
 }
 .footer-menu span a:active, .footer-menu span a:visited {
+  cursor: pointer;
   text-decoration: none;
   outline: none;
   border: none;
