--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -210,9 +210,7 @@ footer {
 
         &:active,
         &:visited {
-            text-decoration: none;
-            outline: none;
-            border: none;
+            @include standart-link()
         }
     }
 
@@ -226,9 +224,7 @@ footer {
 
             &:active,
             &:visited {
-                text-decoration: none;
-                outline: none;
-                border: none;
+                @include standart-link()
             }
         }
     }
