--- a/styles/style.css
+++ b/styles/style.css
@@ -152,9 +152,10 @@ footer {
 }
 
 .footer-menu {
-  margin: 0 auto;
+  margin: 0 10px 0 100px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 .footer-menu ul {
   display: flex;
@@ -164,12 +165,14 @@ footer {
   margin-right: 50px;
 }
 .footer-menu ul li {
-  font-size: 28px;
+  font-size: 20px;
   list-style-type: none;
 }
 .footer-menu ul li a {
   text-decoration: none;
   color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1.2px;
 }
 .footer-menu ul li a:hover {
   transition: all 0.3s ease-out;
@@ -185,12 +188,12 @@ footer {
   border: none;
 }
 .footer-menu span {
-  margin-left: 24px;
+  margin-left: 18px;
 }
 .footer-menu span a {
   color: #fff;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 20px;
 }
 .footer-menu span a:active, .footer-menu span a:visited {
   cursor: pointer;
