--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -178,9 +178,10 @@ footer {
 }
 
 .footer-menu {
-    margin: 0 auto;
+    margin: 0 10px 0 100px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     ul {
         display: flex;
@@ -190,12 +191,14 @@ footer {
         margin-right: 50px;
 
         li {
-            font-size: 28px;
+            font-size: 20px;
             list-style-type: none;
 
             a {
                 text-decoration: none;
                 color: #fff;
+                text-transform: uppercase;
+                letter-spacing: 1.2px;
 
                 &:hover {
                     transition: all .3s ease-out;
@@ -215,12 +218,12 @@ footer {
     }
 
     span {
-    margin-left: 24px;
+    margin-left: 18px;
 
         a {
             color: #fff;
             text-decoration: none;
-            font-size: 24px;
+            font-size: 20px;
 
             &:active,
             &:visited {
